Fix: fix bug related to card having overflow

--- a/styles/base/typography.css
+++ b/styles/base/typography.css
@@ -1,3 +1,7 @@
+.font-size-xxs {
+  font-size: 12px;
+}
+
 .font-size-xs {
   font-size: 13px;
 }
